--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation "io.springfox:springfox-boot-starter:3.0.0"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
