--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation "io.springfox:springfox-boot-starter:3.0.0"
+	implementation "org.springframework.data:spring-data-elasticsearch:4.2.0"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
