Adding product controller and product endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 mongodbConnectionString=mongodb://localhost:27017
+productGenerator.seedId = 10000
+productGenerator.batchSize = 100000
+productGenerator.name=product
