--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 	mavenCentral()
 	maven {
 		name = "GitHubPackages"
-		url = "https://maven.pkg.github.com/headlessecommerce/headlessecommerce"
+		url = "https://maven.pkg.github.com/headlessecommerce/headlessecommerce.github.io"
 		credentials {
 			username = System.getenv("GITHUB_ACTOR")
 			password = System.getenv("GITHUB_TOKEN")
