--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.4.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'maven-publish'
+	id 'maven-publish'
 }
 
 group = 'com.headless'
@@ -12,18 +12,18 @@ sourceCompatibility = '8'
 repositories {
     mavenCentral()
 }
-publishing {
-    repositories {
-        maven {
-            name = "headlessecommerce"
-            url = "https://maven.pkg.github.com/headlessecommerce/headlessecommerce.github.io"
-            credentials {
-                username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GITHUB_TOKEN")
-            }
-        }
-    }
 
+publishing {
+	repositories {
+		maven {
+			name = "GitHubPackages"
+			url = "https://maven.pkg.github.com/headlessecommerce/headlessecommerce.github.io"
+			credentials {
+				username = System.getenv("GITHUB_ACTOR")
+				password = System.getenv("GITHUB_TOKEN")
+			}
+		}
+	}
 }
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
