--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ publishing {
 			}
 		}
 	}
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
