--- a/build.gradle
+++ b/build.gradle
@@ -2,30 +2,36 @@ plugins {
     id 'org.springframework.boot' version '2.4.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-	id 'maven-publish'
+    id 'maven-publish'
 }
-
-group = 'com.headless'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
 
 repositories {
     mavenCentral()
 }
+jar {
+    enabled = true
+}
 
+bootJar {
+    classifier = 'application'
+}
 publishing {
-	repositories {
-		maven {
-			name = "GitHubPackages"
-			url = "https://maven.pkg.github.com/headlessecommerce/headlessecommerce.github.io"
-			credentials {
-				username = System.getenv("GITHUB_ACTOR")
-				password = System.getenv("GITHUB_TOKEN")
-			}
-		}
-	}
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/headlessecommerce/headlessecommerce.github.io"
+            credentials {
+                username = System.getenv("GITHUB_USERNAME")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
     publications {
         gpr(MavenPublication) {
+            groupId = 'com.headless'
+            artifactId = 'headless-ecommerce'
+            version = '0.3'
             from(components.java)
         }
     }
