--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'java'
     id 'maven-publish'
 }
+
+group = 'com.headless'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
 
 repositories {
