--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,4 +25,5 @@ jobs:
       - name: Publish package
         run: gradle publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN_HEADLESS: ${{ secrets.TOKEN_HEADLESS }}
+          USERNAME_HEADLESS: ${{ secrets.USERNAME_HEADLESS }}
