--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ publishing {
             name = "GitHubPackages"
             url = "https://maven.pkg.github.com/headlessecommerce/headlessecommerce.github.io"
             credentials {
-                username = System.getenv("USERNAME_HEADLESS")
-                password = System.getenv("TOKEN_HEADLESS")
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
         }
     }
