--- a/build.gradle
+++ b/build.gradle
@@ -50,10 +50,12 @@ publishing {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "io.springfox:springfox-boot-starter:3.0.0"
-    implementation "org.springframework.data:spring-data-elasticsearch:4.2.0"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     runtimeOnly 'com.h2database:h2'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    
 }
 
 test {
