--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,12 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
-    
+
+    // profile dependencies
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-test'
+
+
 }
 
 test {
